# pytest-stoq

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  pytest_stoq.py  requirements-test.txt  requirements.txt  setup.py
.circleci/: config.yml
docs/: conf.py  index.rst
pytest_stoq/: fixtures.py  plugin.py  stoq.py
tests/: test_fixtures.py  test_plugin.py  test_stoq.py
